--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,34 +1,28 @@
-name: Generate snake animation
+name: Generate Snake Animation
 
 on:
-  schedule: # execute every 12 hours
-    - cron: "* */12 * * *"
-
-  workflow_dispatch:
-
+  schedule:
+    # Executa diariamente às 23h UTC (ou ajuste o horário como preferir)
+    - cron: "0 23 * * *"
   push:
     branches:
-    - main
+      - main  # Substitua por outro branch se necessário
 
 jobs:
-  generate:
-    permissions:
-      contents: write
+  generate-snake:
     runs-on: ubuntu-latest
-    timeout-minutes: 5
-
     steps:
-      - name: generate snake.svg
-        uses: Platane/snk/svg-only@v3
+      - name: Clonar o repositório
+        uses: actions/checkout@v2
+
+      - name: Gerar a animação Snake
+        uses: Platane/snk@v2
         with:
-          joaovitor: ${{ github.joaovitor101 }}
-          outputs: dist/snake.svg?palette=github-dark
+          joaovitor101: ${{ github.repository_owner }}
+          outputs: dist/snake.svg
 
-
-      - name: push snake.svg to the output branch
-        uses: crazy-max/ghaction-github-pages@v3.1.0
+      - name: Enviar animação para o repositório
+        uses: crazy-max/ghaction-github-pages@v3
         with:
           target_branch: output
           build_dir: dist
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
