--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -24,5 +24,5 @@ jobs:
       - name: Enviar animação para o repositório
         uses: crazy-max/ghaction-github-pages@v3
         with:
-          target_branch: output
+          target_branch: main
           build_dir: dist
