--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,28 +1,34 @@
-name: Generate Snake Animation
+name: Generate snake animation
 
 on:
-  schedule:
-    # Executa diariamente às 23h UTC (ou ajuste o horário como preferir)
-    - cron: "0 23 * * *"
+  schedule: # execute every 12 hours
+    - cron: "* */12 * * *"
+
+  workflow_dispatch:
+
   push:
     branches:
-      - main  # Substitua por outro branch se necessário
+    - main
 
 jobs:
-  generate-snake:
+  generate:
+    permissions:
+      contents: write
     runs-on: ubuntu-latest
-    steps:
-      - name: Clonar o repositório
-        uses: actions/checkout@v2
+    timeout-minutes: 5
 
-      - name: Gerar a animação Snake
-        uses: Platane/snk@v2
+    steps:
+      - name: generate snake.svg
+        uses: Platane/snk/svg-only@v3
         with:
           joaovitor101: ${{ github.repository_owner }}
-          outputs: dist/snake.svg
+          outputs: dist/snake.svg?palette=github-dark
 
-      - name: Enviar animação para o repositório
-        uses: crazy-max/ghaction-github-pages@v3
+
+      - name: push snake.svg to the output branch
+        uses: crazy-max/ghaction-github-pages@v3.1.0
         with:
-          target_branch: main
+          target_branch: output
           build_dir: dist
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
